@@ -18,6 +18,7 @@
            in Audio::startRolling().
         - Cleaned some namespace change artifacts. Fixed signal/slot mechanism related to bigtime, pianoroll,
           drumedit (Orcan)
+        - Made plugin slider colors fancy, experimental. (Orcan)
 08.09.2011:
         - Finished namespace MusEWidget. Added namespaces MusEUtil, MusEDialog. (Orcan)
 07.09.2011:
